# media-transcode

./: .dockerignore  .env  .env.example  .env.face-detection.template  .env.local.services  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_MEDIA_DETECTION_GUIDE.md  BULK_CLEANUP_GUIDE.md  CLAUDE.md  CONFIG_PROFILES_DOCUMENTATION.md  DEVELOPMENT.md  Docker-readme.md  Dockerfile  FACE_DETECTION_METRICS.md  FACE_DETECTION_README.md  FACE_DETECTION_SETUP.md  GPU_SETUP.md  PUBSUB_SETUP.md  PUBSUB_TASK_LISTENER_README.md  README.md  S3_CLEANUP_GUIDE.md  WebP_Converter_README.md  add_face_detection_migration.py  add_pubsub_topic_migration.py  app.py  build-local.sh  build_ffmpeg.sh  check_db_schema.py  check_face_worker_logs.sh  check_folder_status.py  check_server_logs.py  clean_code.py  clean_delete_markers.py  cleanup_analysis.md  cleanup_transcode_service.py  config.py  create_config_templates_table.py  docker-compose.yml  (+44 more)
api/: auth.py  background_tasks.py  configs.py  jobs.py  media.py  middleware.py
app_local/: README.md  media_transcode_ui.html  start_unified_server.py  unified_media_server.py  universal_media_converter.py  webp_converter_ui.html  webp_viewer.html
config/: Config_Templates_Manager_Guide.md  UI_Profile_Manager_Guide.md  api_request_examples.json  banner_promoted_profiles.json  base_config.json  batch_quick_templates.json  categorized_profiles_by_use_case.json  complete_profiles_all_features.json  content_api_examples.json  content_profiles_config.json  exhaustive_profiles_all_parameters.json  mobile_profiles_config.json  new_api_usage_guide.md  popup_api_request.json  popup_home_profiles.json  profiles_request.md  sample_content.md  (+4 more)
(+175 files in other folders)
